[metadata]
name = complaince
version = 1.0.1b1
summary = A python function parameter and return type-checking decorator
description-file =
    README.md
author =  Rakesh Vasudevan
home-page = https://github.com/vrakesh/Complaince
license = 'Apache'
classifier =
    Development Status :: 4 - Beta	
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python 
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
[bdist_wheel]
universal=1
[files]
packages =
    complaince
